Add JUnit test and change code